Revert base path changes for custom domain

--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fiwb-logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FIWB AI – The Institution-Aware AI for Students</title>
-    <meta name="description" content="FIWB AI is the first AI assistant that understands your courses, syllabus, and academic journey. Join the waitlist for early beta access." />
-    <meta name="author" content="FIWB AI" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="FIWB AI – An AI That Is Not Dumb" />
-    <meta property="og:description" content="The first institution-aware AI assistant for college students. Join the waitlist for early beta access." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://fiwbai.xyz" />
-    <meta property="og:image" content="https://fiwbai.xyz/og-image.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="FIWB AI" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/fiwb-logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FIWB AI – The Institution-Aware AI for Students</title>
+  <meta name="description"
+    content="FIWB AI is the first AI assistant that understands your courses, syllabus, and academic journey. Join the waitlist for early beta access." />
+  <meta name="author" content="FIWB AI" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@fiwbai" />
-    <meta name="twitter:title" content="FIWB AI – An AI That Is Not Dumb" />
-    <meta name="twitter:description" content="The first institution-aware AI assistant for college students. Join the waitlist." />
-    <meta name="twitter:image" content="https://fiwbai.xyz/og-image.png" />
-  </head>
+  <!-- Open Graph -->
+  <meta property="og:title" content="FIWB AI – An AI That Is Not Dumb" />
+  <meta property="og:description"
+    content="The first institution-aware AI assistant for college students. Join the waitlist for early beta access." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fiwbai.xyz" />
+  <meta property="og:image" content="https://fiwbai.xyz/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="FIWB AI" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@fiwbai" />
+  <meta name="twitter:title" content="FIWB AI – An AI That Is Not Dumb" />
+  <meta name="twitter:description"
+    content="The first institution-aware AI assistant for college students. Join the waitlist." />
+  <meta name="twitter:image" content="https://fiwbai.xyz/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
